Fix: Reflect API changes in the codebase