@@ -4,6 +4,7 @@ import com._pi.benepick.domain.categories.entity.Categories;
 import com._pi.benepick.domain.categories.repository.CategoriesRepository;
 import com._pi.benepick.domain.goods.dto.GoodsResponse;
 import com._pi.benepick.domain.goods.entity.Goods;
+import com._pi.benepick.domain.goods.entity.GoodsStatus;
 import com._pi.benepick.domain.goods.repository.GoodsRepository;
 import com._pi.benepick.domain.goodsCategories.entity.GoodsCategories;
 import com._pi.benepick.domain.goodsCategories.repository.GoodsCategoriesRepository;
@@ -20,6 +21,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.AbstractMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -28,63 +30,13 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class RafflesQueryServiceImpl {
 
-    private RafflesRepository rafflesRepository;
-    private WinnersRepository winnersRepository;
-    private GoodsRepository goodsRepository;
-    private MembersRepository membersRepository;
-    private GoodsCategoriesRepository goodsCategoriesRepository;
+    private final RafflesRepository rafflesRepository;
+    private final WinnersRepository winnersRepository;
+    private final GoodsRepository goodsRepository;
+    private final MembersRepository membersRepository;
+    private final GoodsCategoriesRepository goodsCategoriesRepository;
 
-    @Autowired
-    public RafflesQueryServiceImpl(RafflesRepository rafflesRepository, WinnersRepository winnersRepository, GoodsRepository goodsRepository, MembersRepository membersRepository, GoodsCategoriesRepository goodsCategoriesRepository) {
-        this.rafflesRepository = rafflesRepository;
-        this.winnersRepository = winnersRepository;
-        this.goodsRepository = goodsRepository;
-        this.membersRepository = membersRepository;
-        this.goodsCategoriesRepository = goodsCategoriesRepository;
-    }
-
-    public RafflesResponse.RafflesResponseByGoodsListDTO getAllRafflesByGoodsId(Long goodsId) {
-        Optional<Goods> goodsOptional = goodsRepository.findById(goodsId);
-
-        if (goodsOptional.isPresent()) {
-            Goods goods = goodsOptional.get();
-            List<Raffles> rafflesList = rafflesRepository.findAllByGoodsId(goods);
-
-            List<RafflesResponse.RafflesResponseByGoodsDTO> rafflesResponseByGoodsDTOS = rafflesList.stream()
-                    .map(raffles -> {
-                        // 각 Raffles 객체의 id로 Winners 리스트 가져오기
-                        Optional<Winners> winnersOptional = (winnersRepository.findByRaffleId(raffles));
-
-                        Winners winners = winnersOptional.orElseGet(() -> {
-                            Winners defaultWinners = new Winners();
-                            defaultWinners.setSequence(-1);
-                            defaultWinners.setStatus(Status.SCHEDULED);
-                            return defaultWinners;
-                        });
-
-                        return RafflesResponse.RafflesResponseByGoodsDTO.builder()
-                                .id(raffles.getId())
-                                .memberId(raffles.getMemberId().getId())
-                                .memberName(raffles.getMemberId().getName())
-                                .goodsId(raffles.getGoodsId().getId())
-                                .point(raffles.getPoint())
-                                .sequence(winners.getSequence())
-                                .winnerStatus(winners.getStatus())
-                                .rafflesAt(raffles.getUpdated_at())
-                                .build();
-                    })
-                    .collect(Collectors.toList());
-
-            return RafflesResponse.RafflesResponseByGoodsListDTO.builder()
-                    .rafflesResponseByGoodsList(rafflesResponseByGoodsDTOS)
-                    .build();
-        } else {
-            // _GOODS_NOT_FOUND(HttpStatus.BAD_REQUEST 로 변경 예정.
-            throw new EntityNotFoundException("Goods not found with id: " + goodsId);
-        }
-    }
-
-    public RafflesResponse.RafflesResponseByMembersListDTO getAllRafflesByMemberId(String memberId) {
+    public RafflesResponse.RafflesResponseByMembersListDTO getProgressRafflesByMemberId(String memberId) {
         Optional<Members> membersOptional = membersRepository.findById(memberId);
 
         if (membersOptional.isPresent()) {
@@ -92,14 +44,46 @@ public class RafflesQueryServiceImpl {
             List<Raffles> rafflesList = rafflesRepository.findAllByMemberId(members);
 
             List<RafflesResponse.RafflesResponseByMembersDTO> rafflesResponseByMembersDTOS = rafflesList.stream()
+                    .filter(raffles -> raffles.getGoodsId().getGoodsStatus() == GoodsStatus.PROGRESS)
+                    .map(raffles -> {
+                        Optional<GoodsCategories> optionalGoodsCategories = goodsCategoriesRepository.findByGoodsId(raffles.getGoodsId());
+
+                        String categoryName = optionalGoodsCategories.map(goodsCategories -> goodsCategories.getCategoryId().getName()).orElse("NONE");
+
+                        return RafflesResponse.RafflesResponseByMembersDTO.builder()
+                                .id(raffles.getId())
+                                .memberId(raffles.getMemberId().getId())
+                                .goodsId(raffles.getGoodsId().getId())
+                                .point(raffles.getPoint())
+                                .rafflesAt(raffles.getUpdated_at())
+                                .category_name(categoryName)
+                                .build();
+                    })
+                    .toList();
+
+            return RafflesResponse.RafflesResponseByMembersListDTO.builder()
+                    .rafflesResponseByMembersList(rafflesResponseByMembersDTOS)
+                    .build();
+        } else {
+            // MEMBERS_NOT_FOUND 로 변경 예정.
+            throw new EntityNotFoundException("Members not found with id: " + memberId);
+        }
+    }
+
+    public RafflesResponse.RafflesResponseByMembersListDTO getCompleteRafflesByMemberId(String memberId) {
+        Optional<Members> membersOptional = membersRepository.findById(memberId);
+
+        if (membersOptional.isPresent()) {
+            Members members = membersOptional.get();
+            List<Raffles> rafflesList = rafflesRepository.findAllByMemberId(members);
+
+            List<RafflesResponse.RafflesResponseByMembersDTO> rafflesResponseByMembersDTOS = rafflesList.stream()
+                    .filter(raffles -> raffles.getGoodsId().getGoodsStatus() == GoodsStatus.COMPLETED)
                     .map(raffles -> {
                         // 각 Raffles 객체의 id로 Winners 리스트 가져오기
-                        Winners winners = (winnersRepository.findByRaffleId(raffles)).orElseGet(() -> {
-                            Winners defaultWinners = new Winners();
-                            defaultWinners.setSequence(-1);
-                            defaultWinners.setStatus(Status.SCHEDULED);
-                            return defaultWinners;
-                        });
+                        Winners winners = winnersRepository.findByRaffleId(raffles).orElseThrow(() ->
+                                new EntityNotFoundException("아직 종료되지 않은 응모 상품입니다.")
+                        );
 
                         Optional<GoodsCategories> optionalGoodsCategories = goodsCategoriesRepository.findByGoodsId(raffles.getGoodsId());
 
@@ -116,7 +100,7 @@ public class RafflesQueryServiceImpl {
                                 .category_name(categoryName)
                                 .build();
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
             return RafflesResponse.RafflesResponseByMembersListDTO.builder()
                     .rafflesResponseByMembersList(rafflesResponseByMembersDTOS)
@@ -124,6 +108,119 @@ public class RafflesQueryServiceImpl {
         } else {
             // MEMBERS_NOT_FOUND 로 변경 예정.
             throw new EntityNotFoundException("Members not found with id: " + memberId);
+        }
+    }
+
+    public RafflesResponse.RafflesResponseByGoodsListDTO getAllRafflesByGoodsId(Long goodsId) {
+        Optional<Goods> goodsOptional = goodsRepository.findById(goodsId);
+
+        if (goodsOptional.isPresent()) {
+            Goods goods = goodsOptional.get();
+            List<Raffles> rafflesList = rafflesRepository.findAllByGoodsId(goods);
+
+            List<RafflesResponse.RafflesResponseByGoodsDTO> rafflesResponseByGoodsDTOS = rafflesList.stream()
+                    .map(raffles -> RafflesResponse.RafflesResponseByGoodsDTO.builder()
+                            .id(raffles.getId())
+                            .memberId(raffles.getMemberId().getId())
+                            .memberName(raffles.getMemberId().getName())
+                            .goodsId(raffles.getGoodsId().getId())
+                            .point(raffles.getPoint())
+                            .rafflesAt(raffles.getUpdated_at())
+                            .build())
+                    .collect(Collectors.toList());
+
+            return RafflesResponse.RafflesResponseByGoodsListDTO.builder()
+                    .rafflesResponseByGoodsList(rafflesResponseByGoodsDTOS)
+                    .build();
+        } else {
+            // _GOODS_NOT_FOUND(HttpStatus.BAD_REQUEST 로 변경 예정.
+            throw new EntityNotFoundException("Goods not found with id: " + goodsId);
+        }
+    }
+
+    public RafflesResponse.RafflesResponseByGoodsListDTO getWaitlistRafflesByGoodsId(Long goodsId) {
+        Optional<Goods> goodsOptional = goodsRepository.findById(goodsId);
+
+        if (goodsOptional.isPresent()) {
+            Goods goods = goodsOptional.get();
+            List<Raffles> rafflesList = rafflesRepository.findAllByGoodsId(goods);
+
+            List<RafflesResponse.RafflesResponseByGoodsDTO> rafflesResponseByGoodsDTOS = rafflesList.stream()
+                    .map(raffles -> {
+                        // 각 Raffles 객체의 id로 Winners 리스트 가져오기
+                        Winners winners = winnersRepository.findByRaffleId(raffles).orElseThrow(() ->
+                                new EntityNotFoundException("아직 종료되지 않은 응모 상품입니다.")
+                        );
+
+                        return new AbstractMap.SimpleEntry<>(raffles, winners);
+                    })
+                    .filter(entry -> entry.getValue().getStatus() == Status.WAITLIST)
+                    .map(entry -> {
+                        Raffles raffles = entry.getKey();
+                        Winners winners = entry.getValue();
+
+                        return RafflesResponse.RafflesResponseByGoodsDTO.builder()
+                                .id(raffles.getId())
+                                .memberId(raffles.getMemberId().getId())
+                                .memberName(raffles.getMemberId().getName())
+                                .point(raffles.getPoint())
+                                .goodsId(raffles.getGoodsId().getId())
+                                .sequence(winners.getSequence())
+                                .winnerStatus(winners.getStatus())
+                                .rafflesAt(raffles.getUpdated_at())
+                                .build();
+                    })
+                    .collect(Collectors.toList());
+
+            return RafflesResponse.RafflesResponseByGoodsListDTO.builder()
+                    .rafflesResponseByGoodsList(rafflesResponseByGoodsDTOS)
+                    .build();
+        } else {
+            // _GOODS_NOT_FOUND(HttpStatus.BAD_REQUEST 로 변경 예정.
+            throw new EntityNotFoundException("Goods not found with id: " + goodsId);
+        }
+    }
+
+
+    public RafflesResponse.RafflesResponseByGoodsListDTO getWinnersRafflesByGoodsId(Long goodsId) {
+        Optional<Goods> goodsOptional = goodsRepository.findById(goodsId);
+
+        if (goodsOptional.isPresent()) {
+            Goods goods = goodsOptional.get();
+            List<Raffles> rafflesList = rafflesRepository.findAllByGoodsId(goods);
+
+            List<RafflesResponse.RafflesResponseByGoodsDTO> rafflesResponseByGoodsDTOS = rafflesList.stream()
+                    .map(raffles -> {
+                        // 각 Raffles 객체의 id로 Winners 리스트 가져오기
+                        Winners winners = winnersRepository.findByRaffleId(raffles).orElseThrow(() ->
+                                new EntityNotFoundException("아직 종료되지 않은 응모 상품입니다.")
+                        );
+
+                        return new AbstractMap.SimpleEntry<>(raffles, winners);
+                    })
+                    .filter(entry -> entry.getValue().getStatus() != Status.WAITLIST)
+                    .map(entry -> {
+                        Raffles raffles = entry.getKey();
+                        Winners winners = entry.getValue();
+
+                        return RafflesResponse.RafflesResponseByGoodsDTO.builder()
+                                .id(raffles.getId())
+                                .memberId(raffles.getMemberId().getId())
+                                .memberName(raffles.getMemberId().getName())
+                                .point(raffles.getPoint())
+                                .goodsId(raffles.getGoodsId().getId())
+                                .winnerStatus(winners.getStatus())
+                                .rafflesAt(raffles.getUpdated_at())
+                                .build();
+                    })
+                    .collect(Collectors.toList());
+
+            return RafflesResponse.RafflesResponseByGoodsListDTO.builder()
+                    .rafflesResponseByGoodsList(rafflesResponseByGoodsDTOS)
+                    .build();
+        } else {
+            // _GOODS_NOT_FOUND(HttpStatus.BAD_REQUEST 로 변경 예정.
+            throw new EntityNotFoundException("Goods not found with id: " + goodsId);
         }
     }
 }
